[gd_scene load_steps=6 format=3 uid="uid://b1x72cfvbhogd"]

[ext_resource type="Script" uid="uid://dnm3jknljqnfl" path="res://scripts/advancementpopup.gd" id="1_8lbjc"]
[ext_resource type="Theme" uid="uid://c0es2kte6qmmp" path="res://scripts/normal.tres" id="2_hh57l"]

[sub_resource type="Animation" id="Animation_hh57l"]
resource_name = "show_notif"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PopupLabel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BG:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1, 2, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("DescLabel:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1, 2, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_l3def"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PopupLabel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BG:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("DescLabel:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2fhnc"]
_data = {
&"RESET": SubResource("Animation_l3def"),
&"show_notif": SubResource("Animation_hh57l")
}

[node name="CanvasLayer" type="CanvasLayer"]
layer = 1000
script = ExtResource("1_8lbjc")

[node name="BG" type="ColorRect" parent="."]
modulate = Color(1, 1, 1, 0)
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -226.0
offset_top = 2.0
offset_right = -1.0
offset_bottom = 97.0
grow_horizontal = 0
theme = ExtResource("2_hh57l")
color = Color(0.101960786, 0.101960786, 0.101960786, 0.6)

[node name="DescLabel" type="Label" parent="."]
modulate = Color(1, 1, 1, 0)
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -223.0
offset_top = 34.0
offset_right = -1.0
offset_bottom = 86.0
grow_horizontal = 0
theme = ExtResource("2_hh57l")
theme_override_font_sizes/font_size = 15
autowrap_mode = 3

[node name="PopupLabel" type="Label" parent="."]
modulate = Color(1, 1, 1, 0)
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -225.0
offset_top = 2.0
offset_right = -1.0
offset_bottom = 33.0
grow_horizontal = 0
theme = ExtResource("2_hh57l")
theme_override_font_sizes/font_size = 20
text = "test hello"

[node name="Anim" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_2fhnc")
}

[connection signal="animation_finished" from="Anim" to="." method="_on_anim_animation_finished"]
